Adjust some themes

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,12 +23,12 @@
             <div class="custom-menu">
                 <p>Mood</p>
                 <ul class="menu">
-                    <li><button id="btn-blue" name="target" value="blue">Blue&nbsp;<sub>Freedom, Intuition, Imagination, Inspiration, and Sensitivity</sub></button></li>
-                    <li><button id="btn-red" name="target" value="red">Red&nbsp;<sub>Hatred, anger, aggression, passion, heat and war</sub></button></li>
-                    <li><button id="btn-yellow" name="target" value="yellow">Yellow&nbsp;<sub>happiness, hope and spontaneity</sub></button></li>
-                    <li><button id="btn-pink" name="target" value="pink">Pink&nbsp;<sub>nurturing, playful, and nostalgic</sub></button></li>
-                    <li><button id="btn-green" class="active" name="target" value="green">Green(default)&nbsp;<sub>harmony, growth, freshness, energy</sub></button></li>
-                    <li><button id="btn-dark" name="target" value="dark">Dark&nbsp;<sub>Power, elegance, sophistication</sub></button></li>
+                    <li><button id="btn-blue" name="target" value="blue">Blue&nbsp;<sub>Freedom, Intuition...</sub></button></li>
+                    <li><button id="btn-red" name="target" value="red">Red&nbsp;<sub>Hatred, anger, aggression...</sub></button></li>
+                    <li><button id="btn-yellow" name="target" value="yellow">Yellow&nbsp;<sub>happiness, hope...</sub></button></li>
+                    <li><button id="btn-pink" name="target" value="pink">Pink&nbsp;<sub>nurturing, playful, nostalgic...</sub></button></li>
+                    <li><button id="btn-green" class="active" name="target" value="green">^Green&nbsp;<sub>harmony, growth...</sub></button></li>
+                    <li><button id="btn-dark" name="target" value="dark">Dark&nbsp;<sub>Power, elegance...</sub></button></li>
                 </ul>
             </div>
         </div>
