--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-html{
+html, body{
     width: 100%;
     height: 100vh;
 }
@@ -6,15 +6,14 @@ html{
 body{
     margin: 0;
     padding: 0;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background: url('/images/green-bg/green1.jpg');
-    /* background: url('/images/bg.jpg'); */
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     overflow: hidden;
     position: relative;
 }
@@ -27,7 +26,8 @@ body button{ outline: none; border: none; background-color: transparent; color: 
     --color-2: hsl(171, 97%, 12%);
     --color-3: hsla(171, 96%, 32%, 0.302);
     --color-4: hsla(171, 97%, 12%, 0.114);
-    --color-5: hsla(171, 97%, 12%, 0.612);
+    --color-5: hsla(171, 97%, 12%, 0.95);
+    --color-6: #fff;
 }
 
 .blue{
@@ -36,7 +36,8 @@ body button{ outline: none; border: none; background-color: transparent; color: 
     --color-2: hsl(222, 97%, 12%); /*For in buttons/form*/
     --color-3: hsla(222, 96%, 32%, 0.302);
     --color-4: hsla(222, 97%, 12%, 0.114);
-    --color-5: hsla(222, 97%, 12%, 0.612);
+    --color-5: hsla(222, 97%, 12%, 0.812);
+    --color-6: #fff;
 }
 
 .red{
@@ -46,15 +47,18 @@ body button{ outline: none; border: none; background-color: transparent; color: 
     --color-3: hsla(0, 96%, 32%, 0.302);
     --color-4: hsla(0, 97%, 12%, 0.114);
     --color-5: hsla(0, 97%, 12%, 0.612);
+    --color-6: #fff;
 }
 
 .yellow{
-    --main-color: hsl(57, 96%, 32%); /*For the clock*/
-    --sub-color: hsla(57, 96%, 32%, 0.502);
+    --main-color: hsl(53, 95%, 44%); /*For the clock*/
+    --sub-color: hsla(53, 96%, 32%, 0.902);
     --color-2: hsl(57, 97%, 12%); /*For in buttons/form*/
     --color-3: hsla(57, 96%, 32%, 0.302);
     --color-4: hsla(57, 97%, 12%, 0.114);
-    --color-5: hsla(57, 97%, 12%, 0.612);
+    --color-5: hsla(57, 97%, 22%, 0.662);
+    --color-6: #ffffff;
+
 }
 
 .pink{
@@ -64,15 +68,17 @@ body button{ outline: none; border: none; background-color: transparent; color: 
     --color-3: hsla(299, 96%, 32%, 0.302);
     --color-4: hsla(299, 97%, 12%, 0.114);
     --color-5: hsla(299, 97%, 12%, 0.612);
+    --color-6: #fff;
 }
 
 .dark{
     --main-color: hsl(82, 1%, 52%); /*For the clock*/
-    --sub-color: hsla(82, 1%, 52%, 0.502);
+    --sub-color: hsla(82, 1%, 52%, 0.602);
     --color-2: hsl(82, 2%, 32%); /*For in buttons/form*/
-    --color-3: hsla(82, 1%, 52%, 0.302);
+    --color-3: hsla(82, 1%, 52%, 0.502);
     --color-4: hsla(82, 2%, 32%, 0.114);
-    --color-5: hsla(82, 2%, 32%, 0.612);
+    --color-5: hsla(82, 2%, 32%, 0.812);
+    --color-6: #fff;
 }
 
 #query-message{
@@ -91,7 +97,7 @@ body button{ outline: none; border: none; background-color: transparent; color: 
     height: 45px;
     background-color: var(--color-3)/*#03a1894d*/; 
     position: absolute;
-    color: white;
+    color: var(--color-6);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -155,12 +161,14 @@ body button{ outline: none; border: none; background-color: transparent; color: 
     height: 50px;
     text-align: left;
     font-weight: bold;
+    letter-spacing: 1px;
+    border-bottom: 1px solid var(--sub-color);
 }
 .menu li button sub{font-style: italic; font-weight: lighter;}
 
 .custom-menu:hover .menu{ display: block; border-radius: 0 0 10px 10px;}
 
-.menu li button:hover{background-color: #dedecd; color: #000000;}
+.menu li button:hover{background-color: #f1f1f0; color: #000000;}
 
 .right-elements button{
     width: 100%;
@@ -171,6 +179,9 @@ body button{ outline: none; border: none; background-color: transparent; color: 
 }
 
 @media screen and (max-width: 375px) {
+    #query-message{
+        top: 120px;
+    }
     .wrapper-menu{
         flex-direction: column;
         justify-content: space-around;
@@ -180,9 +191,11 @@ body button{ outline: none; border: none; background-color: transparent; color: 
     .custom-menu{ position: unset;  width: 100px;}
     .custom-menu::after{top: 25%; right: 38%;}
     .custom-menu:hover::after{ top: 23%}
+
     .left-elements, .right-elements{ margin-left: 20px}
     .menu{width: 100%; left: 0; top: 36px;}
-    .menu li{padding: 10px;}
+    .menu li{padding: 8px;}
+    .menu li button{height: 40px;}
 }
 
 /*Second Part*/
@@ -190,7 +203,7 @@ body button{ outline: none; border: none; background-color: transparent; color: 
  h1[name='title']{
     text-transform: uppercase;
     letter-spacing: 4px;
-    font-size: 25px;
+    font-size: 28px;
     font-weight: bold;
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -212,13 +225,13 @@ body button{ outline: none; border: none; background-color: transparent; color: 
     height: 88px;
     background: var(--main-color)/*#03A189*/;
     opacity: 0.8;
-    color: #fff;
+    color: var(--color-6);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: 50px;
-    text-shadow: 2px 2px 4px #bbcab9;
+    text-shadow: 2px -2px 4px #f3fdf1;
 }
 
 .clock .text{
@@ -241,6 +254,11 @@ body button{ outline: none; border: none; background-color: transparent; color: 
 
 @media screen and (max-width: 767px) {
 
+    html, body{
+        height: 100%;
+    }
+    
+
 .clock { position: relative;}
 
 .clock div{position: unset;}
@@ -248,12 +266,12 @@ body button{ outline: none; border: none; background-color: transparent; color: 
 .clock span{
     width: 85px;
     height: 44px;
-    font-size: 18px;
+    font-size: 25px;
 }
 
 .clock .text{
     height: 20px;
-    font-size: 14px;
+    font-size: 15px;
 }
 
 .clock #am-pm{
@@ -263,7 +281,7 @@ body button{ outline: none; border: none; background-color: transparent; color: 
 
 }
 
-.wrapper-bottom{ bottom: 0; padding: 10px 0;}
+.wrapper-bottom{ bottom: 0; padding: 10px 0; font-size: 18px;}
 
 .wrapper-bottom form {
     display: inline-flex;
