--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,8 @@ html, body{
 body{
     margin: 0;
     padding: 0;
+    height: -webkit-fill-available;
+    height: fill-available;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -19,12 +21,12 @@ body{
 }
 
 body button{ outline: none; border: none; background-color: transparent; color: #fff; font-size: 16px;}
-
+ul *{cursor: pointer;}
 .green{
     --main-color: hsl(171, 96%, 32%);
     --sub-color: hsla(171, 96%, 32%, 0.502);
     --color-2: hsl(171, 97%, 12%);
-    --color-3: hsla(171, 96%, 32%, 0.302);
+    --color-3: hsla(171, 96%, 32%, 0.602);
     --color-4: hsla(171, 97%, 12%, 0.114);
     --color-5: hsla(171, 97%, 12%, 0.95);
     --color-6: #fff;
@@ -34,7 +36,7 @@ body button{ outline: none; border: none; background-color: transparent; color: 
     --main-color: hsl(222, 96%, 32%); /*For the clock*/
     --sub-color: hsla(222, 96%, 32%, 0.502);
     --color-2: hsl(222, 97%, 12%); /*For in buttons/form*/
-    --color-3: hsla(222, 96%, 32%, 0.302);
+    --color-3: hsla(222, 96%, 32%, 0.602);
     --color-4: hsla(222, 97%, 12%, 0.114);
     --color-5: hsla(222, 97%, 12%, 0.812);
     --color-6: #fff;
@@ -44,52 +46,52 @@ body button{ outline: none; border: none; background-color: transparent; color: 
     --main-color: hsl(0, 96%, 32%); /*For the clock*/
     --sub-color: hsla(0, 96%, 32%, 0.502);
     --color-2: hsl(0, 97%, 12%); /*For in buttons/form*/
-    --color-3: hsla(0, 96%, 32%, 0.302);
+    --color-3: hsla(0, 96%, 32%, 0.602);
     --color-4: hsla(0, 97%, 12%, 0.114);
     --color-5: hsla(0, 97%, 12%, 0.612);
     --color-6: #fff;
 }
 
 .yellow{
-    --main-color: hsl(53, 95%, 44%); /*For the clock*/
+    --main-color: rgba(255, 255, 0, 0.9); /*For the clock*/
     --sub-color: hsla(53, 96%, 32%, 0.902);
-    --color-2: hsl(57, 97%, 12%); /*For in buttons/form*/
-    --color-3: hsla(57, 96%, 32%, 0.302);
-    --color-4: hsla(57, 97%, 12%, 0.114);
-    --color-5: hsla(57, 97%, 22%, 0.662);
-    --color-6: #ffffff;
+    --color-2: hsl(60, 100%, 80%); /*For in buttons/form*/
+    --color-3: #FFFF00;
+    --color-4: hsla(57, 97%, 12%, 0.14);
+    --color-5: hsl(60, 100%, 50%, 0.7);
+    --color-6: #000000;
 
 }
 
 .pink{
     --main-color: hsl(299, 96%, 32%); /*For the clock*/
-    --sub-color: hsla(299, 96%, 32%, 0.502);
+    --sub-color: hsla(299, 96%, 32%, 0.602);
     --color-2: hsl(299, 97%, 12%); /*For in buttons/form*/
-    --color-3: hsla(299, 96%, 32%, 0.302);
+    --color-3: hsla(299, 96%, 32%, 0.602);
     --color-4: hsla(299, 97%, 12%, 0.114);
     --color-5: hsla(299, 97%, 12%, 0.612);
     --color-6: #fff;
 }
 
 .dark{
-    --main-color: hsl(82, 1%, 52%); /*For the clock*/
+    --main-color: hsl(82, 0%, 22%); /*For the clock*/
     --sub-color: hsla(82, 1%, 52%, 0.602);
-    --color-2: hsl(82, 2%, 32%); /*For in buttons/form*/
-    --color-3: hsla(82, 1%, 52%, 0.502);
+    --color-2: hsl(0, 0%, 12%); /*For in buttons/form*/
+    --color-3: hsla(0, 0%, 22%, 0.802);
     --color-4: hsla(82, 2%, 32%, 0.114);
     --color-5: hsla(82, 2%, 32%, 0.812);
     --color-6: #fff;
 }
 
 #query-message{
+    display: none;
     position: absolute;
-    width: 200px;
-    height: 40px;
-    background-color: white;
+    width: 250px;
+    height: fit-content;
     top: 50px;
     left: 0;
-    line-height: 40px;
-    padding: 0 10px;
+    padding: 5px 10px;
+    transition: all 5s ease;
 }
 
 .wrapper-menu, .wrapper-bottom{  
@@ -105,7 +107,7 @@ body button{ outline: none; border: none; background-color: transparent; color: 
     margin: 1px auto;
 }
 .wrapper-menu{
-    top: 0;
+    top: 5px;
 }
 
 #name{ 
@@ -129,17 +131,18 @@ body button{ outline: none; border: none; background-color: transparent; color: 
     display: inline-block;
     line-height: 15px;
     transition: all 0.8s;
+    pointer-events: stroke;
 }
 
 .custom-menu::after{
     content: '\25bc';
     position: absolute;
-    top: 40%;
+    top: 45%;
     right: 10px;
 }
 
 .custom-menu:hover{ border-bottom-left-radius: 0; border-bottom-right-radius: 0;}
-.custom-menu:hover::after{ top: 30%; transform: rotate(180deg);}
+.custom-menu:hover::after{ top: 35%; transform: rotate(180deg);}
 
 .menu{
     display: none;
@@ -149,6 +152,8 @@ body button{ outline: none; border: none; background-color: transparent; color: 
     left: 0;
     width: 250px;
     background-color: var(--color-5)/*#013c339c*/;
+    box-shadow: 2px 2px 4px #f9f9f9 , -2px -2px 4px #f9f9f9;
+    
     padding: 0;
     z-index: 10;
     transition: all 0.8s;
@@ -162,6 +167,7 @@ body button{ outline: none; border: none; background-color: transparent; color: 
     text-align: left;
     font-weight: bold;
     letter-spacing: 1px;
+    color: var(--color-6);
     border-bottom: 1px solid var(--sub-color);
 }
 .menu li button sub{font-style: italic; font-weight: lighter;}
@@ -174,6 +180,7 @@ body button{ outline: none; border: none; background-color: transparent; color: 
     width: 100%;
     height: 30px;
     background-color: var(--main-color)/*#03A189*/;
+    color: var(--color-6);
     border-radius: 30px;
     padding: 0 10px;
 }
@@ -193,7 +200,7 @@ body button{ outline: none; border: none; background-color: transparent; color: 
     .custom-menu:hover::after{ top: 23%}
 
     .left-elements, .right-elements{ margin-left: 20px}
-    .menu{width: 100%; left: 0; top: 36px;}
+    .menu{width: 100%; left: 0; top: 36.5px;}
     .menu li{padding: 8px;}
     .menu li button{height: 40px;}
 }
@@ -256,6 +263,7 @@ body button{ outline: none; border: none; background-color: transparent; color: 
 
     html, body{
         height: 100%;
+        overflow: hidden;
     }
     
 
@@ -281,7 +289,7 @@ body button{ outline: none; border: none; background-color: transparent; color: 
 
 }
 
-.wrapper-bottom{ bottom: 0; padding: 10px 0; font-size: 18px;}
+.wrapper-bottom{ bottom: 0; display: flex; justify-content: space-around; font-size: 18px;}
 
 .wrapper-bottom form {
     display: inline-flex;
@@ -347,11 +355,12 @@ label{
 .sentence{ flex-grow: 0.2;}
 
 .social-media{margin: 0 10px}
-.social-media *{padding: 3px; color: #fff;}
+.social-media *{padding: 3px; color: var(--color-6);}
 
 @media screen and (max-width: 575px) {
     .wrapper-bottom{ 
         height: 110px;
+        flex-direction: column;
     }
     .wrapper-bottom form {
         display: inline;
@@ -367,10 +376,13 @@ label{
     }
 }
 
+/* #profile{display: none;} */
+
 #access{
     width: 300px;
     height: fit-content;
     background-color: #ffffff;
+    color: var(--color-6);
     position: absolute;
     right: 10px;
     z-index: 20;
@@ -383,7 +395,7 @@ label{
 }
 
 #access input[type="radio"]{display: none; }
-#access label { padding: 5px 10px; color: #566055cc; }
+#access label { padding: 5px 10px; color: #484242; }
 
 #access div.tab{ 
     border-top: 3px solid var(--sub-color)/*#03a18980*/;
@@ -396,7 +408,7 @@ label{
 
 div.tab h1{
     text-align: center;
-    color: #566055cc;
+    color: #484242cc;
 }
 
 div.tab input{
@@ -410,8 +422,9 @@ div.tab input{
     font-size: 16px;
 }
 
-div.tab form button{display: inline-block; width: 80px; margin: 10px 0; background-color: #9c9c9c;}
+div.tab form button{display: inline-block; width: 80px; margin: 10px 0; background-color: #5f5f5f;}
 div.tab form button[type="submit"]{background-color: var(--main-color)/*#03A189;*/}
+div.tab form button[type="submit"]:focus{ background-color: var(--color-2);}
 
 .form-icon{
     position: absolute;
@@ -425,8 +438,22 @@ div.tab form button[type="submit"]{background-color: var(--main-color)/*#03A189;
 }
 
 #access input[type="radio"]:checked + label + div.tab{ display: block;}
-#access input[type="radio"]:checked + label{ background-color: var(--main-color)/*#03A189*/; color: #fff}
+#access input[type="radio"]:checked + label{ background-color: var(--sub-color)/*#03A189*/; color: #fff}
 
 @media screen and (orientation: landscape) and (max-height: 290px){
     #access div.tab{ width: 300px; height: 200px; display: flex; flex-direction: row; justify-content: space-around;}
 }
+
+/**/
+
+.user-icon{ background-color: var(--sub-color); border-radius: 50%; cursor: pointer;}
+
+#user-section ul{
+    display: none; 
+    list-style: none; position: absolute; top: 22px; right: 10px;
+    z-index: 20; width: 170px; padding: 0;
+}
+
+#user-section ul li{border-bottom: 2px solid #fffcfc; }
+#user-section ul li button{ border-radius: 0px; width: 170px; font-size: 14px; text-align: right;}
+#user-section:hover ul{ display: block;}
