--- a/views/index.hbs
+++ b/views/index.hbs
@@ -87,13 +87,13 @@
                         </button>
                     </form>
                 </div>
-
+{{!-- fmlqioFQuyHKMHtC---}}
             </div>
             {{!-- Use helper to manage this section ---}}
+            <div class="user-icon">
+                <img src="/icons/user.ico" width="32" height="32" alt="User Profile Icon">
+            </div>
             <div id="user-section">
-                <div class="user-icon">
-                    <img src="/icons/user.ico" width="32" height="32" alt="User Profile Icon">
-                </div>
                 <ul>
                     <li><button>Show profile</button></li>
                     <li><button>Upload an avatar</button></li>
